[package]
name = "typemap_rev"
description = "A hashmap, but stores types as keys"
version = "0.1.5"
authors = ["kingbri <bdashore3@gmail.com>", "Alex M. M. <acdenissk69@gmail.com>"]
repository = "https://github.com/bdashore3/typemap_rev"
homepage = "https://github.com/bdashore3/typemap_rev"
license = "ISC"
readme = "README.md"
keywords = ["type", "typemap"]
edition = "2018"
